# FetchBoy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Collection-Generation-Prompt.md  LICENSE  README.md  bmad-commands-reference.md  example-api-calls  index.html  package-lock.json  package.json  session-info.txt  vite.config.ts
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
_bmad-output/: api-client-spec.md  code-styling-audit-report.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffold.md  1-2-sqlite-schema-and-migrations.md  1-3-basic-request-builder.md  1-4-send-request-via-rust.md  10-1-intercept-split-view-with-request-table.md  10-2-request-detail-view-with-subtabs.md  10-3-breakpoints-tab-interface.md  10-4-breakpoint-editor-with-fuzzy-url-matching.md  10-5-extended-breakpoint-actions-response-mapping.md  10-6-extended-breakpoint-actions-status-header-editing.md  10-7-extended-breakpoint-actions-request-blocking.md  10-8-play-button-continue-interrupted-request.md  10-9-split-request-response-capability.md  2-1-monaco-editor-integration.md  2-2-collections-sidebar.md  2-3-save-and-load-requests.md  2-4-request-history.md  3-1-environment-manager.md  3-2-variable-interpolation.md  3-3-auth-types.md  4-1-light-dark-theme.md  4-2-import-export-collections.md  4-3-settings-panel.md  4-4-app-packaging-and-installers.md  4-5-windows-build-compatibility.md  5-1-tab-bar-foundation.md  5-2-per-tab-state-isolation.md  5-3-open-requests-in-new-tab.md  5-4-tab-keyboard-shortcuts-and-reordering.md  5-5-export-request-as-curl-code-snippet.md  5-6-match-query-params-from-url.md  6-1-foldable-side-panel.md  6-2-request-cancellation.md  6-3-keyboard-shortcut-to-send-request.md  6-4-request-timeout-configuration.md  6-5-settings-in-sidebar-accordion.md  7-1-startup-animation.md  7-2-onboarding-tooltip-tutorial.md  7-3-sample-collection.md  7-4-empty-state-polish.md  (+14 more)
_bmad-output/planning-artifacts/: epic-1.md  epic-10.md  epic-2.md  epic-3.md  epic-4.md  epic-5.md  epic-6.md  (+3 more)
dispatch/: .gitignore  components.json  index.html  package.json  tsconfig.app.json  tsconfig.node.json
dispatch/src-tauri/: Cargo.toml  tauri.conf.json
dispatch/src-tauri/capabilities/: default.json
dispatch/src-tauri/src/: db.rs  http.rs  lib.rs  main.rs
docs/: LONG_CHANGELOG.md
fetch-boy/: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
fetch-boy/src-tauri/: Cargo.toml  macos-readme.txt
fetch-boy/src-tauri/capabilities/: default.json
fetch-boy/src-tauri/icons/: icon.icns
fetch-boy/src-tauri/migrations/: 001_initial.sql  002_breakpoints.sql  004_status_headers.sql
fetch-boy/src-tauri/src/: cert.rs  db.rs  http.rs  lib.rs  main.rs  proxy.rs
scripts/: reset-db.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  macos-readme.txt  tauri.conf.json
(+625 files in other folders)
